--- a/Leetcode/Questions/133. Clone Graph.md
+++ b/Leetcode/Questions/133. Clone Graph.md
@@ -7,8 +7,12 @@ difficulty:
 ## Approach:
 #BFS 
 See comments in the code
+Clone while traversing the original graph through BFS
 Similar to BFS, but difference is that the last line is outside the "if" block, which means that we want to add edge between 
 *curr_node* and *neigh* irrespective of whether neigh is already visited or not.
+- Notice that we return ==visited[node]==
+- ==visited== is a dictionary that stores original node number as the key along with its copy as its value
+
 
 ![[Pasted image 20210525200038.png]]
 
