--- a/docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md
+++ b/docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md
@@ -9,7 +9,8 @@ similar: [[278. First Bad Version]]
 #binary-search 
 This is similar to 278. 
 There we were finding just the first occurence of bad version
-Here, we need to find both the first and last positions using similar logics
+Here, we need to write to separate functions to find both the first and last positions using similar logics
+-> Can optimize using the result of the first function we call
 
 **Link**: https://leetcode.com/submissions/detail/706555944/
 **Time**:
