--- a/docs/Leetcode/Questions/15. 3Sum.md
+++ b/docs/Leetcode/Questions/15. 3Sum.md
@@ -2,12 +2,85 @@ title: 15. 3Sum
 date: 2021-05-21 23:20
 tags: #leetcode #new #amazon 
 difficulty: #medium
-similar: 
+similar: [[1. Two Sum]]
 
 ---
-## Approach:
-#two-pointers 
+The challenge here is to ==avoid DUPLICATES==
+Solution is to ==SORT== the array so that duplicate values are next to each other
+Below two approaches vary only in the second step
 
+- The duplicates are skipped at two steps:
+	- In the outer loop for i -> ```if i == 0 or nums[i - 1] != nums[i]:```
+	- In the inner loop for j -> ```while j + 1 < len(nums) and nums[j] == nums[j + 1]:```
+
+- Note that skipping is done ==only when we found the triplet==
+
+## Approach1:
+#hashmap 
+1. SORT
+2. Use [[1. Two Sum]] which uses a hashset
+
+```python
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        res = []
+        nums.sort()
+        for i in range(len(nums)):
+            if nums[i] > 0:  # This is just an optimization, can be skipped
+                break
+            if i == 0 or nums[i - 1] != nums[i]: # Skip Duplicates
+                self.twoSum(nums, i, res)
+        return res
+
+    def twoSum(self, nums: List[int], i: int, res: List[List[int]]):
+        seen = set()
+        j = i + 1
+        while j < len(nums):
+            complement = -nums[i] - nums[j]
+            if complement in seen:
+                res.append([nums[i], nums[j], complement])
+                while j + 1 < len(nums) and nums[j] == nums[j + 1]: # Skip duplicates
+                    j += 1
+            seen.add(nums[j])
+            j += 1
+```
+
+**Link**: 
+**Time**:
+**Space**:
+
+## Approach2:
+#two-pointers 
+1. SORT
+2. Use [[167. Two Sum II - Input array is sorted]] 
+
+```python
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        res = []
+        nums.sort()
+        for i in range(len(nums)):
+            if nums[i] > 0:
+                break
+            if i == 0 or nums[i - 1] != nums[i]:
+                self.twoSumII(nums, i, res)
+        return res
+
+    def twoSumII(self, nums: List[int], i: int, res: List[List[int]]):
+        lo, hi = i + 1, len(nums) - 1
+        while (lo < hi):
+            sum = nums[i] + nums[lo] + nums[hi]
+            if sum < 0:
+                lo += 1
+            elif sum > 0:
+                hi -= 1
+            else:
+                res.append([nums[i], nums[lo], nums[hi]])
+                lo += 1
+                hi -= 1
+                while lo < hi and nums[lo] == nums[lo - 1]: # Skip duplicates
+                    lo += 1
+```
 
 **Link**: 
 **Time**:
