--- a/docs/Leetcode/Questions/23. Merge k Sorted Lists.md
+++ b/docs/Leetcode/Questions/23. Merge k Sorted Lists.md
@@ -10,6 +10,7 @@ Use heap for finding the node having the smallest value
 And then point the next pointer of current node to this smallest node.
 
 #finding 
+>[!tip]
 We can insert tuple in a heap
 heapq.heappush(min_heap, ==(value1, value2)==)
 But both elements of tuple should be comparable
