--- a/docs/Leetcode/Questions/78. Subsets.md
+++ b/docs/Leetcode/Questions/78. Subsets.md
@@ -8,7 +8,35 @@ similar:
 ## Approach:
 #backtracking 
 
-**Link**: https://leetcode.com/submissions/detail/640878648/
-Ref: https://leetcode.com/problems/subsets/solution/#:~:text=i%5D%20from%20curr.-,Implementation,-Complexity%20Analysis
+```python
+class Solution:
+    def subsets(self, nums: List[int]) -> List[List[int]]:
+        res = []
+        n = len(nums)
+        for k in range(n+1):
+            # k refers to the window size
+            # Since power set also includes all the elements of arr,
+            # we are iterating till n+1 and not n
+            
+            first_idx = 0 # always start from first number for each window size
+            curr = []
+            self.backtrack(nums, k, res, first_idx, curr)
+        
+        return res
+    
+    def backtrack(self, nums, k, res, first_idx, curr):
+        if len(curr) == k:
+            res.append(curr[:])
+            return
+        
+        n = len(nums)
+        for i in range(first_idx, n):
+            curr.append(nums[i])
+            self.backtrack(nums, k, res, i+1, curr)
+            curr.remove(nums[i])
+```
+
+**Link**: https://leetcode.com/submissions/detail/789154867/
+Ref: https://leetcode.com/problems/subsets/solution/#:~:text=Approach%202%3A%20Backtracking
 **Time**:
 **Space**:
