--- a/docs/Leetcode/Questions/22. Generate Parentheses.md
+++ b/docs/Leetcode/Questions/22. Generate Parentheses.md
@@ -7,12 +7,13 @@ similar:
 ---
 ## Approach:
 #backtracking 
-- only add OPEN parenthesis if open < n
-- only add CLOSING parenthesis if closed < open
+Find conditions when each of "(" or ")" can be possible candidates:
+	- only add OPEN parenthesis **if open < n**
+	- only add CLOSING parenthesis **if closed < open**
 - terminating condition: open == closed == n
 
 Ref: https://www.youtube.com/watch?v=s9fokUqJ76A
 
-**Link**: https://leetcode.com/submissions/detail/569666115/
+**Link**: https://leetcode.com/submissions/detail/784332036/
 **Time**:
 **Space**:
