--- a/docs/Leetcode/Questions/347. Top K Frequent Elements.md
+++ b/docs/Leetcode/Questions/347. Top K Frequent Elements.md
@@ -2,17 +2,37 @@ title: 347. Top K Frequent Elements
 date: 2021-06-14 11:26
 tags: #leetcode #new
 difficulty: #medium 
+similar: [[215. Kth Largest Element in an Array]]
 
 ---
 ## Approach:
 #heap 
 
 Use [[Heap#^cb18ba]] to convert MIN_HEAP to MAX_HEAP
-Similar to [[215. Kth Largest Element in an Array]]
-Instead of numbers, make a heap out of frequence of numbers.
-Note:
-- There might be multiple numbers with same frequency
+- Instead of numbers, make a heap out of frequency of numbers
+- ==Insert pair (freq, num) into the heap instead of just freq since there can be same frequencies for multiple numbers==
 
-**Link**: https://leetcode.com/submissions/detail/507833964/
+Note:
+- ==There might be multiple numbers with same frequency==
+
+```python
+class Solution:
+    def topKFrequent(self, nums: List[int], k: int) -> List[int]:
+        # since we need to store frequencies of nums instead of nums itself
+        num2freq = dict(Counter(nums))
+        
+        res = []
+        for num, freq in num2freq.items():
+            if len(res) < k:
+                # focus on "<"
+                heapq.heappush(res, (freq, num))
+            else:
+                # once k elements are there, push and then pop
+                heapq.heappushpop(res, (freq, num))
+        
+        return [num for freq, num in res]
+```
+
+**Link**: https://leetcode.com/submissions/detail/799301749/
 **Time**:
 **Space**:
