--- a/docs/Leetcode/Questions/15. 3Sum.md
+++ b/docs/Leetcode/Questions/15. 3Sum.md
@@ -5,6 +5,9 @@ difficulty: #medium
 similar: [[1. Two Sum]]
 
 ---
+==PREFER Approach 2==
+
+
 The challenge here is to ==avoid DUPLICATES==
 Solution is to ==SORT== the array so that duplicate values are next to each other
 Below two approaches vary only in the second step
@@ -18,7 +21,7 @@ Below two approaches vary only in the second step
 ## Approach1:
 #hashmap 
 1. SORT
-2. Use [[1. Two Sum]] which uses a hashset
+2. Use [[1. Two Sum]] which uses a ==hashset==
 
 ```python
 class Solution:
@@ -51,6 +54,9 @@ class Solution:
 
 ## Approach2:
 #two-pointers 
+Ref: https://www.youtube.com/watch?v=8uWRUyWpy8M
+Ref: https://www.youtube.com/watch?v=jzZsG8n2R9A
+
 1. SORT
 2. Use [[167. Two Sum II - Input array is sorted]] 
 
