--- a/docs/Leetcode/Questions/33. Search in Rotated Sorted Array.md
+++ b/docs/Leetcode/Questions/33. Search in Rotated Sorted Array.md
@@ -6,6 +6,7 @@ difficulty:
 ---
 ## Approach:
 #binary-search 
+Ref: https://www.youtube.com/watch?v=oTfPJKGEHcc
 
 Think about the two cases:
 ```python
@@ -20,3 +21,14 @@ if nums[mid] < nums[left]
 **Link**: https://leetcode.com/submissions/detail/514154667/
 **Time**:
 **Space**:
+
+---
+## Approach:
+#todo 
+Two pass approach
+1. Find the pivot index
+2. Search either before the pivot or after the pivot
+
+**Link**: 
+**Time**:
+**Space**: 
