--- a/docs/Leetcode/Questions/215. Kth Largest Element in an Array.md
+++ b/docs/Leetcode/Questions/215. Kth Largest Element in an Array.md
@@ -29,8 +29,8 @@ Eg: k=3
 [1,2,3] -> at the end of loop, here we want the smallest which is also the 3rd largest
 
 **Concepts**:  #heap
-**Link**: https://leetcode.com/submissions/detail/495867052/
-**Time**: ==O(nlogk)==, for each num, we are doing heapify operation which is logk
+**Link**: https://leetcode.com/submissions/detail/799917109/
+**Time**: ==O(nlogk)==, for each num, we are doing heapify operation on result array which will be of max k size, hence each operation will be logk
 **Space**: O(k)
 
 ---
