--- a/docs/Leetcode/Questions/49. Group Anagrams.md
+++ b/docs/Leetcode/Questions/49. Group Anagrams.md
@@ -5,7 +5,9 @@ difficulty:
 similar: 
 
 ---
-## Approach:
+==Prefer Approach 2==
+
+## Approach1:
 Finger-printing : Sorting of anagrams returns the same string, use that as fingerprint along with defaultdict
 ```python
 class Solution:
@@ -20,5 +22,24 @@ class Solution:
 ```
 
 **Link**: https://leetcode.com/submissions/detail/767191000/
-**Time**:
-**Space**:
+**Time**: O(NKlogK)
+**Space**: O(NK) ??
+
+---
+## Approach2:
+Time complexity is lesser 
+```python
+class Solution:
+    def groupAnagrams(strs):
+        ans = collections.defaultdict(list)
+        for s in strs:
+            count = [0] * 26
+            for c in s:
+                count[ord(c) - ord('a')] += 1
+            ans[tuple(count)].append(s)
+        return ans.values()
+```
+
+**Link**: 
+**Time**: O(NK)
+**Space**: O(NK)
