--- a/docs/Leetcode/Questions/105. Construct Binary Tree from Preorder and Inorder Traversal.md
+++ b/docs/Leetcode/Questions/105. Construct Binary Tree from Preorder and Inorder Traversal.md
@@ -12,6 +12,20 @@ Key observations:
     
 2.  Inorder traversal follows `Left -> Root -> Right`, therefore if we know the position of `Root`, we can recursively split the entire array into two subtrees.
 
-**Link**: https://leetcode.com/submissions/detail/508612635/
+```python
+class Solution:
+    def buildTree(self, preorder: List[int], inorder: List[int]) -> Optional[TreeNode]:
+        if not preorder or not inorder:
+            return None
+        
+        root = TreeNode(preorder[0])
+        mid = inorder.index(preorder[0])
+        root.left = self.buildTree(preorder[1:mid+1], inorder[:mid])
+        root.right = self.buildTree(preorder[mid+1:], inorder[mid+1:])
+        
+        return root
+```
+
+**Link**: https://leetcode.com/submissions/detail/840097397/
 **Time**:
 **Space**:
