--- a/docs/Leetcode/Questions/11. Container With Most Water.md
+++ b/docs/Leetcode/Questions/11. Container With Most Water.md
@@ -19,7 +19,9 @@ class Solution:
         while start < end:
             if min(height[start], height[end])*(end - start) > maxVol:
                 maxVol = min(height[start], height[end])*(end - start)
-                
+
+			# move in the direction that increases the height of the container
+			# since thats the only way to increase the water that can be contained
             if height[start] > height[end]:
                 end -= 1
             else:
