--- a/docs/Leetcode/Questions/15. 3Sum.md
+++ b/docs/Leetcode/Questions/15. 3Sum.md
@@ -2,7 +2,7 @@ title: 15. 3Sum
 date: 2021-05-21 23:20
 tags: #leetcode #new #amazon 
 difficulty: #medium
-similar: [[1. Two Sum]]
+similar: [[1. Two Sum]] [[167. Two Sum II - Input array is sorted]]
 
 ---
 ==PREFER Approach 2==
@@ -66,6 +66,8 @@ class Solution:
         res = []
         nums.sort()
         for i in range(len(nums)):
+            # since nums are already sorted, encountering 0 means all further numbers
+            # have to be > 0, hence they can't sum to zero; hence SKIP
             if nums[i] > 0:
                 break
             if i == 0 or nums[i - 1] != nums[i]:
@@ -84,8 +86,11 @@ class Solution:
                 res.append([nums[i], nums[lo], nums[hi]])
                 lo += 1
                 hi -= 1
-                while lo < hi and nums[lo] == nums[lo - 1]: # Skip duplicates
+                # keep incrementing/decrementing lo/hi as long as we find duplicates
+                while lo < hi and nums[lo] == nums[lo - 1]:
                     lo += 1
+                while lo < hi and nums[hi] == nums[hi+1]:
+                    hi -= 1
 ```
 
 **Link**: 
