--- a/docs/Leetcode/Questions/239. Sliding Window Maximum.md
+++ b/docs/Leetcode/Questions/239. Sliding Window Maximum.md
@@ -7,8 +7,11 @@ similar:
 ---
 ## Approach:
 #deque 
-Idea is to keep the dq always ==monotonically decreasing== for each window
-In that case, the maximum number for each window lies at ==dq[0]==
+- Keep the deque always ==monotonically decreasing== for each window
+- In that case, the maximum number for each window lies at ==dq[0]==, since elements are in decreasing order
+- ==push the indices== instead of the numbers
+- while appending new element for current window:
+	- remove all elements that are smaller than that number and then insert it
 
 Ref: https://www.youtube.com/watch?v=DfljaUwZsOk&t=7s
 
