--- a/docs/Leetcode/Questions/5. Longest Palindromic Substring.md
+++ b/docs/Leetcode/Questions/5. Longest Palindromic Substring.md
@@ -9,7 +9,7 @@ similar: [[3. Longest Substring Without Repeating Characters]]
 #two-pointers 
 
 1. Start from CENTER and expand outwards
-2. Look for both odd and even cases
+2. Look for both ==odd and even cases==
 
 Ref:
 https://www.youtube.com/watch?v=XYQecbcd6_c
