--- a/docs/Leetcode/Questions/78. Subsets.md
+++ b/docs/Leetcode/Questions/78. Subsets.md
@@ -7,6 +7,41 @@ similar:
 ---
 ## Approach:
 #backtracking 
+similar to [[77. Combinations]]
+- iterate over the entire array, similar to [[77. Combinations]] 
+- each edge in the backtracking tree, is a potential subset, hence add it then and there
+
+```python
+class Solution:
+    def subsets(self, nums: List[int]) -> List[List[int]]:
+        
+        def backtrack(idx, curr):
+            if idx==len(nums): # only helpful for all-number element
+                return
+            
+            for i in range(idx, len(nums)):
+                curr.append(nums[i])
+                # append every curr (each edge in the tree)
+                res.append(curr[:])
+                backtrack(i+1, curr)
+                curr.pop()
+            
+        res = []
+        curr = []
+        backtrack(0, curr)
+        
+        return res + [[]]
+```
+
+**Link**: https://leetcode.com/submissions/detail/830243067/
+**Time**: 
+**Space**:
+
+
+---
+
+## Approach:
+#backtracking 
 
 ```python
 class Solution:
