--- a/docs/Leetcode/Questions/236. Lowest Common Ancestor of a Binary Tree.md
+++ b/docs/Leetcode/Questions/236. Lowest Common Ancestor of a Binary Tree.md
@@ -4,9 +4,9 @@ tags: #leetcode #new
 difficulty: #medium 
 
 ---
-## Approach:
+## Approach: Using Parent Pointers
 #trees 
-Do ==iterative== preorder traversal, and keep track of parent of each of the nodes before inserting into the stack
+Do ==iterative== preorder traversal / ==any traversal (BFS)==, and keep track of parent of each of the nodes before inserting into the stack
 ```python
 if node.left:
 	parent[node.left] = node  #<= Focus
@@ -25,5 +25,14 @@ while p:
 ```
 
 **Link**: https://leetcode.com/submissions/detail/515609569/
+**Time**:
+**Space**:
+
+
+---
+## Approach: Without Parent Pointers
+#todo 
+
+**Link**: 
 **Time**:
 **Space**:
