--- a/docs/Leetcode/Questions/207. Course Schedule.md
+++ b/docs/Leetcode/Questions/207. Course Schedule.md
@@ -7,8 +7,8 @@ difficulty:
 ## Approach:
 #topological-sort
 Refer [[Topological Sort]]
-Return True if there is a possible topo sort given the prerequisites
-Keep track of total as well as removed nodes 
+- Return True if there is a possible topo sort given the prerequisites
+- Keep track of total as well as removed nodes 
 
 **Link**:  https://leetcode.com/submissions/detail/499682356/
 **Time**: #todo 
