--- a/docs/Leetcode/Questions/15. 3Sum.md
+++ b/docs/Leetcode/Questions/15. 3Sum.md
@@ -62,37 +62,42 @@ Ref: https://www.youtube.com/watch?v=jzZsG8n2R9A
 
 ```python
 class Solution:
-    def threeSum(self, nums: List[int]) -> List[List[int]]:
-        res = []
-        nums.sort()
-        for i in range(len(nums)):
-            # since nums are already sorted, encountering 0 means all further numbers
-            # have to be > 0, hence they can't sum to zero; hence SKIP
-            if nums[i] > 0:
-                break
-            if i == 0 or nums[i - 1] != nums[i]:
-                self.twoSumII(nums, i, res)
-        return res
+    def threeSum(self, nums: List[int]) -> List[List[int]]:        
+        def two_sum(i, nums):
+            lo, hi = i+1, len(nums)-1
+            while lo<hi:
+                if nums[i] + nums[lo] + nums[hi] == 0:
+                    res.append([nums[i], nums[lo], nums[hi]])
 
-    def twoSumII(self, nums: List[int], i: int, res: List[List[int]]):
-        lo, hi = i + 1, len(nums) - 1
-        while (lo < hi):
-            sum = nums[i] + nums[lo] + nums[hi]
-            if sum < 0:
-                lo += 1
-            elif sum > 0:
-                hi -= 1
-            else:
-                res.append([nums[i], nums[lo], nums[hi]])
-                lo += 1
-                hi -= 1
-                # keep incrementing/decrementing lo/hi as long as we find duplicates
-                while lo < hi and nums[lo] == nums[lo - 1]:
-                    lo += 1
-                while lo < hi and nums[hi] == nums[hi+1]:
-                    hi -= 1
+                    # Keep skipping duplicates for both lo and hi
+                    while lo<hi and nums[lo]==nums[lo+1]:
+                        lo+=1
+                    lo+=1
+                    while lo<hi and nums[hi]==nums[hi-1]:
+                        hi-=1
+                    hi-=1
+
+                elif nums[i] + nums[lo] + nums[hi] > 0:
+                    # Keep skipping duplicates for hi
+                    while lo<hi and nums[hi]==nums[hi-1]:
+                        hi-=1
+                    hi-=1
+                else:
+                    # Keep skipping duplicates for lo
+                    while lo<hi and nums[lo]==nums[lo+1]:
+                        lo+=1
+                    lo+=1
+        
+        nums = sorted(nums)
+        res = []
+        for i in range(len(nums)):
+            # Keep skipping duplicates for i
+            if i==0 or nums[i]!=nums[i-1]:
+                two_sum(i, nums)
+        
+        return res
 ```
 
-**Link**: 
+**Link**: https://leetcode.com/problems/3sum/submissions/925085456/
 **Time**:
 **Space**:
