--- a/docs/Leetcode/Questions/167. Two Sum II - Input array is sorted.md
+++ b/docs/Leetcode/Questions/167. Two Sum II - Input array is sorted.md
@@ -8,6 +8,21 @@ Use ==two pointers==
 Increment front / Decrement rear depending whether nums[front] + nums[rear] >/</= target
 
 **Concepts**: #two-pointers
+```python
+class Solution:
+    def twoSum(self, numbers: List[int], target: int) -> List[int]:
+        front, rear = 0, len(numbers)-1
+        
+        while front < rear:
+            if numbers[front] + numbers[rear] == target:
+                return [front+1, rear+1]
+            
+            elif numbers[front] + numbers[rear] > target:
+                rear-=1
+            
+            elif numbers[front] + numbers[rear] < target:
+                front+=1
+```
 **Link**: https://leetcode.com/submissions/detail/496048202/
 **Time**: ==O(n)==
 **Space**: O(1)
