--- a/docs/Leetcode/Questions/208. Implement Trie (Prefix Tree).md
+++ b/docs/Leetcode/Questions/208. Implement Trie (Prefix Tree).md
@@ -15,4 +15,46 @@ Once the entire key is scanned, current node should have =="end"== in the curren
 3. Search for a key prefix: time -> O(m), space -> O(1)
 Unlike above, there is no need to search for "end" since we are looking for only a prefix
 
-**Link**: https://leetcode.com/submissions/detail/501943641/
+```python
+class TrieNode:
+    def __init__(self):
+        self.children = {}
+        self.end_of_word = False
+
+class Trie:
+    def __init__(self):
+        self.root = TrieNode()
+
+    def insert(self, word: str) -> None:
+        curr = self.root
+        for c in word: 
+            if c not in curr.children:
+                curr.children[c] = TrieNode()
+            curr = curr.children[c]
+        curr.end_of_word = True
+
+    def search(self, word: str) -> bool:
+        curr = self.root
+        for c in word:
+            if c not in curr.children:
+                return False
+            curr = curr.children[c]
+        return curr.end_of_word
+
+    def startsWith(self, prefix: str) -> bool:
+        curr = self.root
+        for c in prefix:
+            if c not in curr.children:
+                return False
+            curr = curr.children[c]
+        return True
+
+
+# Your Trie object will be instantiated and called as such:
+# obj = Trie()
+# obj.insert(word)
+# param_2 = obj.search(word)
+# param_3 = obj.startsWith(prefix)
+```
+
+**Link**: https://leetcode.com/problems/implement-trie-prefix-tree/submissions/919789852/
