--- a/docs/Leetcode/Questions/424. Longest Repeating Character Replacement.md
+++ b/docs/Leetcode/Questions/424. Longest Repeating Character Replacement.md
@@ -19,28 +19,24 @@ Ref: https://www.youtube.com/watch?v=gqXU1UyA8pk
 ```python
 class Solution:
     def characterReplacement(self, s: str, k: int) -> int:
-        char2freq = dict()
-        l=0
+        counts = {}
+        leftp = 0
         maxlen = 0
         maxfreq = 0
-        
-        for r in range(len(s)):
-            char2freq[s[r]] = char2freq.get(s[r], 0) + 1
-            
-            maxfreq = max(maxfreq, char2freq[s[r]])
-            
-            # maintain the substring length and slide the window if the substring is invalid
-            if (r-l+1) - maxfreq <=k:
-                maxlen = max(maxlen, r-l+1)
+
+        for rightp in range(len(s)):
+            counts[s[rightp]] = counts.get(s[rightp], 0) + 1
+            maxfreq = max(maxfreq, counts[s[rightp]])
+
+            if (rightp - leftp + 1) - maxfreq <= k:
+                maxlen = max(maxlen, (rightp - leftp + 1))
             else:
-                char2freq[s[l]]-=1
-                l+=1
-            
-            r+=1
-        
+                counts[s[leftp]] -= 1
+                leftp += 1
+
         return maxlen
 ```
 
-**Link**: https://leetcode.com/submissions/detail/819830912/
+**Link**: https://leetcode.com/problems/longest-repeating-character-replacement/submissions/956122197/
 **Time**: O(n)
 **Space**: O(1)
