--- a/docs/Leetcode/Questions/46. Permutations.md
+++ b/docs/Leetcode/Questions/46. Permutations.md
@@ -10,6 +10,32 @@ similar:
 
 >[!tip] Focus on putting curr[:] while appending
 
+```python
+class Solution:
+    def permute(self, nums: List[int]) -> List[List[int]]:
+    
+        cur = []
+        res = []
+        visited = set()
+        self.backtrack(nums, cur, res, visited)
+        
+        return res
+        
+    def backtrack(self, nums, cur, res, visited):
+        if len(cur) == len(nums):
+            res.append(cur[:])
+            return
+        
+        for num in nums:
+            if num in visited:
+                continue
+            cur.append(num)
+            visited.add(num)
+            self.backtrack(nums, cur, res, visited)
+            visited.remove(num)
+            cur.pop()
+```
+
 **Link**: https://leetcode.com/submissions/detail/784352383/
 **Time**: 
 **Space**: 
