--- a/docs/Leetcode/Questions/49. Group Anagrams.md
+++ b/docs/Leetcode/Questions/49. Group Anagrams.md
@@ -27,7 +27,7 @@ class Solution:
 
 ---
 ## Approach2:
-Time complexity is lesser 
+==Time complexity is lesser ==
 ```python
 class Solution:
     def groupAnagrams(strs):
