--- a/docs/Leetcode/Questions/75. Sort Colors.md
+++ b/docs/Leetcode/Questions/75. Sort Colors.md
@@ -7,6 +7,7 @@ similar:
 ---
 ## Approach:
 #two-pointers 
+Ref: https://www.youtube.com/watch?v=4xbWSRZHqac
 
 - Take 3 pointers:
 	- p0 as the right most boundary of 0s - move p0 if 0 is found
@@ -26,7 +27,7 @@ class Solution:
         """
         p0 = 0 #rightmost boundary of 0s
         p2 = len(nums)-1 #leftmost boundary of 2s
-        curr = 0 #
+        curr = 0
         
         while curr <= p2:
             if nums[curr] == 0:
@@ -40,6 +41,7 @@ class Solution:
             elif nums[curr] == 2:
                 nums[p2], nums[curr] = nums[curr], nums[p2]
                 p2-=1
+                # don't increment i
             
 ```
 
