--- a/docs/Leetcode/Questions/79. Word Search.md
+++ b/docs/Leetcode/Questions/79. Word Search.md
@@ -8,6 +8,10 @@ similar:
 ## Approach:
 #backtracking 
 
-**Link**: https://leetcode.com/submissions/detail/467806790/
+To keep track of visited coordinates:
+- Either modify the coordinate at board with "-1" (OR)
+- Maintain visited
+
+**Link**: https://leetcode.com/problems/word-search/submissions/928772919/
 **Time**:
-**Space**:
+**Space**: 
