--- a/docs/Leetcode/Questions/973. K Closest Points to Origin.md
+++ b/docs/Leetcode/Questions/973. K Closest Points to Origin.md
@@ -72,5 +72,5 @@ def kClosest(self, points: List[List[int]], k: int) -> List[List[int]]:
 
 
 **Link**: https://leetcode.com/submissions/detail/510174049/
-**Time**:
+**Time**: O(klogn) since we are popping the smallest elements k number of times, and each popping takes logn time to again make the tree heapified
 **Space**:
