--- a/docs/Leetcode/Questions/994. Rotting Oranges.md
+++ b/docs/Leetcode/Questions/994. Rotting Oranges.md
@@ -11,11 +11,52 @@ Ref: https://www.youtube.com/watch?v=y704fEOx0s0
 #BFS 
 - ==Multi-source== BFS
 - Push all the original rotten oranges into the queue, and start BFS from all of them
+- Keep track of fresh oranges in the board initially
+- Once BFS is over, check if fresh_oranges\==0
 
 #finding 
 - To delimit different layers, put (-1, -1) into the deque
 - Use "directions" to iterate over neighboring cells
 
-**Link**: https://leetcode.com/problems/rotting-oranges/submissions/860262010/
+```python
+class Solution:
+    def orangesRotting(self, grid: List[List[int]]) -> int:
+        dq = deque()
+
+        fresh_oranges = 0
+        ROWS, COLS = len(grid), len(grid[0])
+        for r in range(ROWS):
+            for c in range(COLS):
+                if grid[r][c] == 1:
+                    fresh_oranges+=1
+                if grid[r][c] == 2:
+                    dq.append((r,c))
+        
+        dq.append((-1, -1)) # to dilineate different layers
+
+        directions = [(-1, 0), (1, 0), (0, 1), (0, -1)]
+        time_elapsed = -1
+        while dq:
+            r, c = dq.popleft()
+            if r==-1:
+                # level changed, meaning 1 minute has passed
+                time_elapsed+=1
+                if dq:
+                    # first layer of rotten oranges are over
+                    # meaning we have processed all of their children
+                    dq.append((-1, -1))
+            else:
+                for dx, dy in directions:
+                    nx, ny = r+dx, c+dy
+                    if 0<=nx<ROWS and 0<=ny<COLS:
+                        if grid[nx][ny] == 1:
+                            grid[nx][ny] = 2
+                            fresh_oranges-=1
+                            dq.append((nx, ny))
+        
+        return time_elapsed if fresh_oranges==0 else -1
+```
+
+**Link**: https://leetcode.com/problems/rotting-oranges/submissions/920474772/
 **Time**:
 **Space**:
