--- a/docs/Leetcode/Questions/152. Maximum Product Subarray.md
+++ b/docs/Leetcode/Questions/152. Maximum Product Subarray.md
@@ -6,8 +6,31 @@ similar:
 
 ---
 ## Approach:
+Ref: (Neetcode) https://www.youtube.com/watch?v=lXVy6YWFcRM
 
+```python
+class Solution:
+    def maxProduct(self, nums: List[int]) -> int:
+        max_so_far = 1
+        min_so_far = 1
+        res = max(nums)
+        # if we initialize res==1, in some of the cases, res=1 
+        # becomes the answer, even though 1 is not in nums
 
-**Link**: https://leetcode.com/submissions/detail/812089266/
+        for n in nums:
+            temp = max_so_far
+            max_so_far = max(n*max_so_far, 
+                             n*min_so_far,
+                             n)
+            min_so_far = min(n*temp, 
+                             n*min_so_far,
+                             n)
+            
+            res = max(res, max_so_far, min_so_far)
+        
+        return res
+```
+
+**Link**: https://leetcode.com/problems/maximum-product-subarray/submissions/943544632/
 **Time**:
 **Space**:
