adding Leetcode + Notes

--- a/docs/Leetcode/Questions/323. Number of Connected Components in an Undirected Graph.md
+++ b/docs/Leetcode/Questions/323. Number of Connected Components in an Undirected Graph.md
@@ -12,3 +12,37 @@ similar: [[547. Number of Provinces]]
 **Link**: https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/submissions/861313299/
 **Time**:
 **Space**:
+
+---
+## Approach:
+#DFS 
+
+```python
+class Solution:
+    def countComponents(self, n: int, edges: List[List[int]]) -> int:
+        def dfs(node):
+            for neighbor in adj[node]:
+                if neighbor not in visited:
+                    visited.add(neighbor)
+                    dfs(neighbor)
+
+        visited = set()
+        count = 0
+        adj = collections.defaultdict(list)
+
+        for x, y in edges:
+            adj[x].append(y)
+            adj[y].append(x)
+
+        for node in range(n):
+            if node not in visited:
+                count+=1
+                visited.add(node)
+                dfs(node)
+        
+        return count
+```
+
+**Link**: https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/submissions/957414061/
+**Time**:
+**Space**:
