--- a/docs/Leetcode/Questions/74. Search a 2D Matrix.md
+++ b/docs/Leetcode/Questions/74. Search a 2D Matrix.md
@@ -12,6 +12,8 @@ Each time mid index is found,
 row = mid//n
 column = mid%n
 
+Ref: See editorial
+
 **Link**: https://leetcode.com/submissions/detail/513754641/
 **Time**:
 **Space**:
