--- a/docs/Leetcode/Questions/103. Binary Tree Zigzag Level Order Traversal.md
+++ b/docs/Leetcode/Questions/103. Binary Tree Zigzag Level Order Traversal.md
@@ -9,7 +9,7 @@ difficulty: #medium
 Similar to [[102. Binary Tree Level Order Traversal]], but here each element of container is not a list, but a deque
 ![[Pasted image 20210529192647.png]]
  
-This is because we want to add elements to container from left->right and right->left depending on current depth of the node. And to append element in the beginning, DEQUE has O(1) complexity.
+This is because we want to add elements to container from ==left->right== and ==right->left== depending on current depth of the node. And to append element in the beginning, DEQUE has O(1) complexity.
 
 ![[Pasted image 20210529192859.png]]
 
