--- a/docs/Leetcode/Questions/26. Remove Duplicates from Sorted Array.md
+++ b/docs/Leetcode/Questions/26. Remove Duplicates from Sorted Array.md
@@ -6,7 +6,33 @@ difficulty:
 ---
 ## Approach:
 #two-pointers 
+Keep track of two pointers:
+- One for traversing the array
+- One for tracking the index at which next unique element will be placed
 
-**Link**: https://leetcode.com/submissions/detail/565753839/
+- Also keep track of unique element that was seen last and do nothing as long as we keep seeing this element.
+
+```python
+class Solution:
+    def removeDuplicates(self, nums: List[int]) -> int:
+        # this will be the idx at which next unique element will be placed
+        # this will also be used to return the count of unique elements
+        unique_count = 0
+
+        # current unique element that has been running
+        # can be anything since it will anyways be replaced by the first element
+        # in the very first loop
+        curr_unique = -1000
+        
+        for num in nums:
+            if num != curr_unique:
+                curr_unique = num
+                nums[unique_count] = num
+                unique_count+=1
+                
+        return unique_count
+```
+
+**Link**: https://leetcode.com/problems/remove-duplicates-from-sorted-array/submissions/973638066/?envType=study-plan-v2&envId=top-interview-150
 **Time**:
 **Space**:
