Leetcode 169 - Majority Element

--- a/docs/Leetcode/Questions/169. Majority Element.md
+++ b/docs/Leetcode/Questions/169. Majority Element.md
@@ -20,14 +20,14 @@ class Solution:
             if nums[i] == res:
                 count+=1
             else:
+	            count-=1
                 if count==0:
                     res = nums[i]
-                else:
-                    count-=1
+                    count=1
         
         return res
 ```
 
-**Link**: https://leetcode.com/problems/majority-element/submissions/905916648/
+**Link**: https://leetcode.com/problems/majority-element/submissions/974999103/?envType=study-plan-v2&envId=top-interview-150
 **Time**: O(n)
 **Space**: O(1)
