--- a/docs/Leetcode/Questions/380. Insert Delete GetRandom O(1).md
+++ b/docs/Leetcode/Questions/380. Insert Delete GetRandom O(1).md
@@ -10,14 +10,13 @@ similar:
 -> maintain dict : val -> its index in the list
 -> list to store the vals
 
-insert:
+**insert:**
 -> add the index of new element in the list in the dict
 
-delete:
--> move last element in place of the deleted element and update the last element's index 
-in the dict
+**delete:**
+-> move last element in place of the deleted element and update the last element's index in the dict
 
-get_random:
+**get_random:**
 -> use random.choice
 
 ![[Pasted image 20221020181122.png|600]]
