--- a/docs/Leetcode/Questions/167. Two Sum II - Input array is sorted.md
+++ b/docs/Leetcode/Questions/167. Two Sum II - Input array is sorted.md
@@ -36,6 +36,6 @@ use binary search to find index of [target-element] in the range numbers[==i+1==
 #finding while condition in binary search has to be less=="<="==high and not less =="<"== high
 
 **Concepts**: #binary-search
-**Link**: 
+**Link**: https://leetcode.com/problems/two-sum-ii-input-array-is-sorted/submissions/496076898/?envType=study-plan-v2&envId=top-interview-150
 **Time**: ==O(nlogn)==, since we are doing binary search for each element
 **Space**:
