--- a/docs/Leetcode/Questions/105. Construct Binary Tree from Preorder and Inorder Traversal.md
+++ b/docs/Leetcode/Questions/105. Construct Binary Tree from Preorder and Inorder Traversal.md
@@ -14,7 +14,7 @@ Key observations:
 
 ```python
 class Solution:
-    def buildTree(self, preorder: List[int], inorder: List[int]) -> Optional[TreeNode]:
+    def buildTree(self, preorder, inorder):
         if not preorder or not inorder:
             return None
         
