--- a/docs/Leetcode/Questions/112. Path Sum.md
+++ b/docs/Leetcode/Questions/112. Path Sum.md
@@ -2,7 +2,7 @@ title: 112. Path Sum
 date: 2023-05-19 17:31
 tags: #leetcode #new
 difficulty:
-similar: 
+similar: [[129. Sum Root to Leaf Numbers]]
 
 ---
 ## Approach:
