--- a/docs/Leetcode/Questions/136. Single Number.md
+++ b/docs/Leetcode/Questions/136. Single Number.md
@@ -11,6 +11,7 @@ similar:
 Ref: https://www.youtube.com/watch?v=qMPX1AOa83k
 
 Simply do XOR over all the numbers, the result will be the answer
+Refer [[Bit Manipulation#^4cfaa6]]
 
 **Why does this work ?**
 The duplicates cancel out and return 0 upon doing XOR.
