--- a/docs/Leetcode/Questions/21. Merge Two sorted lists.md
+++ b/docs/Leetcode/Questions/21. Merge Two sorted lists.md
@@ -1,4 +1,4 @@
-title: 21. Merge Two sorted lists
+m1 fiatitle: 21. Merge Two sorted lists
 date: 2022-07-15 16:43
 tags: #leetcode #new
 difficulty:
