--- a/docs/Leetcode/Questions/3. Longest Substring Without Repeating Characters.md
+++ b/docs/Leetcode/Questions/3. Longest Substring Without Repeating Characters.md
@@ -16,6 +16,6 @@ similar:
 Refer this for explanation:
 https://leetcode.com/problems/longest-substring-without-repeating-characters/discuss/347818/Python3%3A-sliding-window-O(N)-with-explanation
 
-**Link**: 
+**Link**: https://leetcode.com/problems/longest-substring-without-repeating-characters/submissions/1211699479/
 **Time**:
 **Space**: 
