--- a/docs/Leetcode/Questions/338. Counting Bits.md
+++ b/docs/Leetcode/Questions/338. Counting Bits.md
@@ -6,11 +6,13 @@ similar:
 
 ---
 ## Approach:
-#dp 
-Ref: 
+#dp #bit-manipulation 
+Ref: https://www.youtube.com/watch?v=RyBM56RIWrM
+
 - The most significant bit moves to left every time the number is a power of 2
+- #finding A power of 2 has only 1 bit set to 1 Eg: 2 / 4 / 8
 - Number of bits at i:
-	- dp[i] = 1 + dp[i-offset]    (offset is the larget 2's power that has reached yet)
+	- dp[i] = 1 + dp[i-offset]    (offset is the largest 2's power that has reached yet)
 ![[Pasted image 20230306184819.png]]
 **Link**: https://leetcode.com/problems/counting-bits/submissions/910472152/
 **Time**:
