--- a/docs/Leetcode/Questions/437. Path Sum III.md
+++ b/docs/Leetcode/Questions/437. Path Sum III.md
@@ -3,6 +3,8 @@ date: 2023-06-09 22:49
 tags: #leetcode #new
 difficulty:
 similar: [[560. Subarray Sum Equals K]]
+[[112. Path Sum]]
+
 
 ---
 ## Approach:
