--- a/docs/Leetcode/Questions/295. Find Median from Data Stream.md
+++ b/docs/Leetcode/Questions/295. Find Median from Data Stream.md
@@ -10,13 +10,13 @@ Ref: https://www.youtube.com/watch?v=itmhHWaHupI
 
 #min-heap #max-heap
 - Have two heaps
-	- Small (Min heap) - stores lower half of numbers
-	- Large (Max heap) - stores upper half of numbers
-- Add number to min heap and check if:
+	- Small (==Max== heap) - stores **lower half** of numbers
+	- Large (==Min== heap) - stores **upper half** of numbers
+- Add number to small heap and check if:
 	- max num in Small is > min num in Large -> Move from small to large
 	- if len(Small/Large) , move it to Large/Small
 	- ==(order of these steps matter)==
 
-**Link**: https://leetcode.com/problems/find-median-from-data-stream/submissions/1053137500/?envType=study-plan-v2&envId=top-interview-150
+**Link**: https://leetcode.com/problems/find-median-from-data-stream/submissions/1210554984/?envType=study-plan-v2&envId=top-interview-150
 **Time**:
 **Space**:
