--- a/docs/Leetcode/Questions/207. Course Schedule.md
+++ b/docs/Leetcode/Questions/207. Course Schedule.md
@@ -10,6 +10,38 @@ Refer [[Topological Sort]]
 - Return True if there is a possible topo sort given the prerequisites
 - Keep track of total as well as removed nodes 
 
+```python
+from collections import deque, defaultdict
+class Solution:
+    def canFinish(self, numCourses: int, prerequisites: List[List[int]]):
+        # Making graph (adjaceny list for outgoing edges and in_degree counter) from prerequisites
+        adj_list_out, in_deg = defaultdict(list), {}
+        num_edges = 0
+        for course, prereq in prerequisites:
+            num_edges+=1
+            adj_list_out[prereq].append(course)
+            in_deg[course] = in_deg.get(course,0)+1
+        
+        # Finding nodes that have no incoming edges and adding to queue
+        dq = deque([k for k in range(numCourses) if k not in in_deg])
+        
+        # Popping from queue, removing edges and adding new nodes with no incoming edges
+        removed_edges = 0
+        while dq:
+            course = dq.popleft()
+            for out_node in adj_list_out[course]:
+                in_deg[out_node]-=1
+                removed_edges+=1
+                
+                if in_deg[out_node] == 0:
+                    dq.append(out_node)
+        
+        # if there are still some nodes left, then it has some cycles
+        if num_edges == removed_edges:
+            return True
+        else:
+            return False
+```
 **Link**:  https://leetcode.com/submissions/detail/499682356/
 **Time**: #todo 
 **Space**:
