--- a/docs/Leetcode/Questions/994. Rotting Oranges.md
+++ b/docs/Leetcode/Questions/994. Rotting Oranges.md
@@ -52,6 +52,9 @@ class Solution:
                         if grid[nx][ny] == 1:
                             grid[nx][ny] = 2
                             fresh_oranges-=1
+                            # this orange has gone bad
+                            # so it can effect others - add it just like
+                            # initial ones were added in deque
                             dq.append((nx, ny))
         
         return time_elapsed if fresh_oranges==0 else -1
